# PackingSdk

./: .gitignore  LICENSE  README.md
c#/PackingSdk/: NestInput.cs  NestOutput.cs  PackingSdk.cs  PackingSdk.csproj  PackingSdk.sln  PackingSdkWrapper.cs  packages.config
c#/PackingSdk/ConsoleProject/: ConsoleProject.csproj  FirstRun.cs  Program.cs
c#/PackingSdk/Lib/x64/: packing.dll.lib
c#/PackingSdk/Properties/: AssemblyInfo.cs
c#/PackingSdk/TestProject/: TestCaseMain.cs  TestProject.csproj
c++/PackingSdk/: PackingSdk.sln
c++/PackingSdk/Nuget/: PackingSdk.bat  PackingSdk.nuspec  PackingSdk.targets
c++/PackingSdk/PackingSdk/: JsonUtils.cpp  JsonUtils.h  NestInput.h  NestOutput.h  PackingError.h  PackingSdk.aps  PackingSdk.h  PackingSdk.rc  PackingSdk.vcxproj  PackingSdk.vcxproj.filters  PackingSdkAll.h  json.hpp  resource.h
c++/PackingSdk/PackingSdk/ConsoleProject/: ConsoleProject.cpp  ConsoleProject.vcxproj  ConsoleProject.vcxproj.filters  FirstRun.h
c++/PackingSdk/PackingSdk/TestProject/: TestCaseCommon.cpp  TestCaseCommonOffline.cpp  TestCaseMain.cpp  TestCaseOffline.cpp  TestCaseOne.cpp  TestProject.vcxproj  TestProject.vcxproj.filters  TestThreadSafty.hpp  main.cpp
c++/PackingSdk/PackingSdk/jsons/: 1216-t2-input.json  43d3e6ac-8114-4ba8-aa75-b1b357879c7e.json  testInputVersion1-int.json  testInputVersion1.json  testInputVersion2.json  testInputVersionOnePart.json
java/PackingSdk/: CompileAndPack.bat  MANIFEST.MF
java/PackingSdk/Lib/x86/: packing.dll.lib
java/PackingSdk/data/: 2.json
java/PackingSdk/src/: Main.java
python/: CopyLibAndCompile.bat
python/PackingSdk/: .gitignore  pyproject.toml  setup.py
script/: CopyAllLibAndCompileAll.bat  CopyAllLibAndCompileX86.bat  CopyLibAndCompile_C#.bat  CopyLibAndCompile_C++.bat  CopyLibAndCompile_Java.bat
(+29 files in other folders)
