# (C) Copyright 2024 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = [ "setuptools>=60", "setuptools-scm>=8" ]

[project]
name = "PackingSdk"

description = "Sdk of KNest for python"
keywords = [ "KNest", "python", "tools" ]

license = { file = "LICENSE" }
authors = [
  { name = "KNest", email = "" },
]

requires-python = ">=3.5"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: Microsoft :: Windows",
]

dynamic = [ "version" ]
dependencies = [
  "cffi",
  "pydantic",
  "pyyaml",
  "numpy",
  "findlibs",
]

optional-dependencies.all = [ "PackingSdk" ]

optional-dependencies.tests = [ "pytest", "pytest-cov", "pytest-flakes" ]


[tool.setuptools]
include-package-data = true
zip-safe = true

[tool.setuptools_scm]
version_file = "sdk/_version.py"

[tool.setuptools.package-data]
sdk = ["*.h"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120